-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, 6.5.6, 6.8.0, 6.8.3
-
-
Multimedia, weeks 13-14
In the QML media player, when playing a video file and pause it, after seeking, instead of showing the video at the seek position, a black screen is shown.
You can reproduce the issue using the example project with the Boot2Qt image on a Raspberry Pi board.
Edit: As seen from the comments below, this bugreport have also been used to track a related bug which rather is a missing feature in Qt 6.8: When playing to the end of a video stream the VideoOutput goes black instead of keeping the last frame visible. The option of switching between these two behaviours was introduced in Qt 6.9 via the new VideoOutput property endOfStreamPolicy. Backporting a simplified version of this feature to Qt 6.8 is suggested in this Gerrit change: https://codereview.qt-project.org/c/qt/qtmultimedia/+/634419
- relates to
-
QTBUG-133135 Paused or completed video playback freezes application using MediaPlayer (gstreamer backend)
-
- Closed
-